setup project with navigation

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,8 @@
 // Mixins in here
+.flex (@justify, @align, @font-size, @navwidth) {
+    display: flex;
+    justify-content: @justify;
+    align-items: @align;
+    font-size: @font-size;
+    width: @navwidth;
+}
