--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,11 @@
 // Navigation Styles here
+
+.mainNav {
+    .flex(space-between, flex-end, @small, @navwidth);
+    padding: 20px;
+    margin: 10px;
+}
+
+.funBus {
+    .flex(flex-start, center, 20px, @navwidth);
+}
