--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,12 @@
-
 // Color assignments 
 @font-color: @shark;
 @button-bg: @eastern-blue;
-@main-bg:  @white;
+@main-bg: @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
+@small: 16px;
+@navwidth: 50%;
+
 
 // Colors
 @white: #FFFFFF;
