Got the desktop version working

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,11 +1,16 @@
 // Navigation Styles here
 
 .mainNav {
-    .flex(space-between, flex-end, @small, @navwidth);
-    padding: 20px;
-    margin: 10px;
+    .flex(space-between, flex-start, row, 16px);
+    margin: @margin;
+    width: 50%;
 }
 
 .funBus {
-    .flex(flex-start, center, 20px, @navwidth);
+    .flex(flex-start, center, row, 4rem);
+    margin: @margin;
+}
+
+.fun-bus-img {
+    margin: @margin;
 }
