--- a/css/index.css
+++ b/css/index.css
@@ -171,18 +171,22 @@ img {
 .mainNav {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
+  flex-direction: row;
   font-size: 16px;
+  margin: 20px;
   width: 50%;
-  padding: 20px;
-  margin: 10px;
 }
 .funBus {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  font-size: 20px;
-  width: 50%;
+  flex-direction: row;
+  font-size: 4rem;
+  margin: 20px;
+}
+.fun-bus-img {
+  margin: 20px;
 }
 .footer {
   width: 100%;
@@ -194,6 +198,14 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.btn {
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: teal;
+  color: white;
+  cursor: wait;
+  font-size: 16px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -240,7 +252,4 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
-}
-hr {
-  border: 1px dashed black;
 }
