--- a/less/footer.less
+++ b/less/footer.less
@@ -12,6 +12,8 @@
 }
 
 .btn {
-  .btn-style(10px 30px, 10px, teal, white, wait);
+  .btn-style(10px 30px, 10px, teal, white, pointer);
   font-size: @small;
+  width: 65%;
+
 }
