--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,13 @@ img {
   font-size: 16px;
   width: 65%;
 }
+@media (max-width: 500px) {
+  .btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -298,7 +305,7 @@ img {
 @media (max-width: 500px) {
   .home .content-pick {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
   }
