--- a/less/footer.less
+++ b/less/footer.less
@@ -16,5 +16,12 @@
   font-size: @small;
   width: 65%;
 
+  @media @mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+  }
 
 }
