--- a/less/home-page.less
+++ b/less/home-page.less
@@ -81,7 +81,7 @@
 
     @media @mobile {
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       flex-direction: column;
       align-items: center;
 
