moved the variables

--- a/less/variables.less
+++ b/less/variables.less
@@ -4,8 +4,7 @@
 @main-bg: @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
-@small: 16px;
-@margin: 20px;
+
 
 
 // Colors
@@ -15,5 +14,10 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 
+// Media Queries
 @mobile: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 800px)";
+
+//Sizes
+@small: 16px;
+@margin: 20px;
