Added padding to the top image

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation Styles here
 
 .mainNav {
-    .flex(space-between, flex-start, row, 16px);
+    .flex(space-between, flex-start, row, @small);
     margin: @margin;
     width: 50%;
 
