--- a/css/index.css
+++ b/css/index.css
@@ -217,18 +217,19 @@ img {
 .btn {
   padding: 10px 30px;
   border-radius: 10px;
-  background-color: teal;
+  background-color: #17A2B8;
   color: white;
   cursor: pointer;
   font-size: 16px;
   width: 65%;
 }
 .btn:hover {
-  background-color: #001a1a;
+  background-color: #0c525d;
 }
 @media (max-width: 500px) {
   .btn {
     display: flex;
+    color: #17A2B8;
     flex-direction: column;
     align-items: center;
   }
