--- a/less/footer.less
+++ b/less/footer.less
@@ -12,15 +12,15 @@
 }
 
 .btn {
-  .btn-style(10px 30px, 10px, teal, white, pointer);
+  .btn-style(10px 30px, 10px, @eastern-blue, white, pointer);
   font-size: @small;
   width: 65%;
 
   @media @mobile {
     display: flex;
+    color: @eastern-blue;
     flex-direction: column;
     align-items: center;
-
 
   }
 
