--- a/less/footer.less
+++ b/less/footer.less
@@ -18,7 +18,7 @@
 
   @media @mobile {
     display: flex;
-    color: @eastern-blue;
+    background-color: @eastern-blue;
     flex-direction: column;
     align-items: center;
 
