--- a/css/index.css
+++ b/css/index.css
@@ -224,7 +224,7 @@ img {
   width: 65%;
 }
 .btn:hover {
-  background-color: #0c525d;
+  background-color: #000203;
 }
 @media (max-width: 500px) {
   .btn {
