--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,11 @@
-
 // Color assignments 
 @font-color: @shark;
 @button-bg: @eastern-blue;
-@main-bg:  @white;
+@main-bg: @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
+
+
 
 // Colors
 @white: #FFFFFF;
@@ -12,3 +13,11 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Media Queries
+@mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px)";
+
+//Sizes
+@small: 16px;
+@margin: 20px;
