updated the buttons

--- a/less/footer.less
+++ b/less/footer.less
@@ -2,11 +2,26 @@
   width: 100%;
   border-top: 2px dashed silver;
   background: @sandy-beach;
-  
+
   p {
     text-align: center;
     color: @font-color;
     font-size: 1.6rem;
     padding: 20px;
   }
+}
+
+.btn {
+  .btn-style(10px 30px, 10px, @eastern-blue, white, pointer);
+  font-size: @small;
+  width: 65%;
+
+  @media @mobile {
+    display: flex;
+    background-color: @eastern-blue;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
 }
