--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,9 @@
     margin: @margin;
     width: 50%;
 
-
+    a {
+        text-decoration: none;
+    }
 
     @media @mobile {
         display: flex;
