--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,9 @@ img {
   margin: 20px;
   width: 50%;
 }
+.mainNav a {
+  text-decoration: none;
+}
 @media (max-width: 500px) {
   .mainNav {
     display: flex;
@@ -213,6 +216,26 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.btn {
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: #17A2B8;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  width: 65%;
+}
+.btn:hover {
+  background-color: #093e47;
+}
+@media (max-width: 500px) {
+  .btn {
+    display: flex;
+    background-color: #17A2B8;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .home .content-section {
   margin: 30px 0;
